# k13

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: aligned_pod_vector.h  basic_iterator.h  basic_reverse_iterator.h  bytes.h  color.h  event.h  int_from_bytes.h  pod_vector.h  scalar.h  thread_pool.h
scripts/: build-debug.bat  build-release.bat
src/: color.cpp  main.cpp  scalar.cpp  thread_pool.cpp
tests/: CMakeLists.txt
tests/test_against_aligned_vector/: CMakeLists.txt
tests/test_against_aligned_vector/src/: main.cpp
tests/test_against_std_vector/: CMakeLists.txt
tests/test_against_std_vector/src/: main.cpp
tests/test_byte_swap/: CMakeLists.txt
tests/test_byte_swap/src/: main.cpp
tests/test_bytes/: CMakeLists.txt
tests/test_bytes/src/: main.cpp
tests/test_byteswap/: CMakeLists.txt
tests/test_byteswap/src/: main.cpp
tests/test_event/: CMakeLists.txt
tests/test_event/src/: main.cpp
tests/test_pod_vector/: CMakeLists.txt
tests/test_scalar/: CMakeLists.txt
tests/test_scalar/src/: main.cpp
tests/test_vector_byte_alignment/: CMakeLists.txt
tests/test_vector_byte_alignment/src/: main.cpp
